Update circle.yml with pytest, pytest-cov

--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,11 @@
 #####
 
 
+dependencies:
+    pre:
+        - pip install pytest
+        - pip install pytest-cov
+
 test:
    override:
       - py.test --cov --cov-report html:$CIRCLE_TEST_REPORTS --junitxml=junit.xml tests/
