--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,8 @@
 
 dependencies:
     pre:
+        - pip install -r requirements.txt
+        - pip install -e .
         - pip install pytest
         - pip install pytest-cov
 
