--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,12 @@
 #####
 
 
+machine:
+    services:
+        - docker
+    python:
+        version: 2.7.11
+
 dependencies:
     pre:
         - pip install -r requirements.txt
