--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ machine:
 
 dependencies:
     pre:
-        - pip install -r requirements.txt
+        #- pip install -r requirements.txt
         - pip install -e .
         - pip install pytest
         - pip install pytest-cov
