--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ machine:
 dependencies:
     pre:
         #- pip install -r requirements.txt
-        - setup.py install
+        - python setup.py install
         - pip install pytest
         - pip install pytest-cov
 
