--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,8 @@ dependencies:
 
 test:
    override:
-      - py.test --cov --cov-report html:$CIRCLE_TEST_REPORTS --junitxml=junit.xml tests/
+      - mkdir -p $CIRCLE_TEST_REPORTS/pytest
+      - py.test --cov --cov-report html:$CIRCLE_TEST_REPORTS --junitxml=$CIRCLE_TEST_REPORTS/pytest/junit.xml tests/
       
 
 
