--- a/.coveragerc
+++ b/.coveragerc
@@ -3,6 +3,8 @@ omit =
     tests/*
     /home/ubuntu/virtualenvs/venv-system/lib/python2.7/site-packages/_pytest/*
     /home/ubuntu/virtualenvs/venv-system/lib/python2.7/distutils/*
+    /home/ubuntu/virtualenvs/venv-system/lib/python2.7/site-packages/py/*
+    /home/ubuntu/virtualenvs/venv-system/lib/python2.7/site-packages/pytest_cov/*
 
 [report]
 exclude_lines =
