--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ jobs:
             git submodule update --init
             git submodule foreach git pull origin $CIRCLE_BRANCH
 
+      - run:
+          name: Creating Artefact Folder
+          command: |
+            mkdir /tmp/artefacts;
+
       # Install Python py.test tools. (TODO: Skip download if already in cache.)
       - run:
           name: Install python requirements & pytest tools
@@ -35,8 +40,10 @@ jobs:
       - run:
           name: Run py.test & coverage report against libutils package
           command: |
-            mkdir -p $CIRCLE_TEST_REPORTS/pytest
-            py.test --cov --cov-report html:$CIRCLE_TEST_REPORTS --junitxml=$CIRCLE_TEST_REPORTS/pytest/junit.xml tests/
+            py.test --cov --cov-report html:/tmp/artifacts --junitxml=/tmp/artifacts/pytest/junit.xml tests/
+
+      - store_artifacts:
+          path: /tmp/artefacts
 
       - deploy:
           name: Deploy python package to devpi 
