--- a/.coveragerc
+++ b/.coveragerc
@@ -5,6 +5,9 @@ omit =
     /home/ubuntu/virtualenvs/venv-system/lib/python2.7/distutils/*
     /home/ubuntu/virtualenvs/venv-system/lib/python2.7/site-packages/py/*
     /home/ubuntu/virtualenvs/venv-system/lib/python2.7/site-packages/pytest_cov/*
+    /usr/local/lib/python2.7/dist-packages/_pytest/*
+    /usr/local/lib/python2.7/dist-packages/py/*
+    /usr/local/lib/python2.7/dist-packages/pytest_cov/*
 
 [report]
 exclude_lines =
