--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     environment:
       TEST_REPORTS: /tmp/test-reports
       COVERALLS_REPO_TOKEN: ien2C1f5InnEFCI33oPei3wsn71TFvVZQ
-    working_directory: ~/libutils
+    working_directory: /Users/danvir/Masterbox/sideprojects/github/newtonsystems/libutils/libutils
     steps:
       - checkout
 
@@ -58,6 +58,7 @@ jobs:
           command: |
               # NOTE: At the moment even no changes are packaged up into
               #       a new python devpi package
+              make html
               ~/dev-utils/bin/deploy_sphinx_docs.sh libutils docs/build/html/
 
       - deploy:
