--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,13 +62,13 @@ jobs:
       - run:
           name: Run py.test & coverage report against libutils package
           command: |
-            cc-test-reporter before-build
-            py.test --cov --cov-report html:${TEST_REPORTS} --junitxml=${TEST_REPORTS}/pytest/junit.xml tests/ ; cc-test-reporter after-build --exit-code $?
+            ./cc-test-reporter before-build
+            py.test --cov --cov-report html:${TEST_REPORTS} --junitxml=${TEST_REPORTS}/pytest/junit.xml tests/ ; ./cc-test-reporter after-build --exit-code $?
 
       - run:
           name: Run linter
           command: |
-            pylint -r y --output-format=parseable --load-plugins=pylint.extensions.check_docs libutils > /tmp/artifacts/lint || true
+            pylint -r y --output-format=colorized --load-plugins=pylint.extensions.check_docs libutils > /tmp/artifacts/lint || true
 
       - deploy:
           name: Upload coverage results to coveralls
