--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     environment:
       TEST_REPORTS: /tmp/test-reports
       COVERALLS_REPO_TOKEN: ien2C1f5InnEFCI33oPei3wsn71TFvVZQ
-      CC_TEST_REPORTER_ID: d25f67d317327459d14dca522099c332c71ecaa6344cef14b04445bbf4686e9c
+      CODECLIMATE_REPO_TOKEN: d25f67d317327459d14dca522099c332c71ecaa6344cef14b04445bbf4686e9c
     working_directory: ~/libutils
     steps:
       - checkout
@@ -67,7 +67,7 @@ jobs:
       - deploy:
           name: Upload coverage results to code climate
           command: |
-            codeclimate-test-reporter --token ${CODECLIMATE_REPO_TOKEN}
+            CODECLIMATE_REPO_TOKEN=${CODECLIMATE_REPO_TOKEN} codeclimate-test-reporter
 
       - deploy:
           name: Deploy python package to devpi 
