--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     environment:
       TEST_REPORTS: /tmp/test-reports
       COVERALLS_REPO_TOKEN: ien2C1f5InnEFCI33oPei3wsn71TFvVZQ
-      CODECLIMATE_REPO_TOKEN: d25f67d317327459d14dca522099c332c71ecaa6344cef14b04445bbf4686e9c
+      CODECLIMATE_REPO_TOKEN: 9b5bddb06418a3c448e2b90c01dbd8e5ac5971a0da4dcb5cc4484dd79691f60d
     working_directory: ~/libutils
     steps:
       - checkout
@@ -21,7 +21,7 @@ jobs:
           name: Clone dev-utils repo (Development utility scripts/tools)
           command: |
             cd ~/
-            git clone -b $CIRCLE_BRANCH https://github.com/newtonsystems/dev-utils.git
+            git clone -b master https://github.com/newtonsystems/dev-utils.git
 
       - run:
           name: Clone devops repo (Update the submodule to the latest change)
@@ -81,7 +81,7 @@ jobs:
               # NOTE: At the moment even no changes are packaged up into
               #       a new python devpi package
               pushd docs; make html ; popd
-              ~/dev-utils/bin/deploy_sphinx_docs.sh libutils docs/build/html/
+              ~/dev-utils/bin/deploy_sphinx_docs.sh $CIRCLE_PROJECT_REPONAME docs/build/html/
 
       # Upload test results
       - store_test_results:
